# unified-data-engine

./: .env.example  .gitignore  CHANGELOG.md  Makefile  ROADMAP.md  Readme.md  docker-compose.yml  pyproject.toml  requirements.txt
api/: main.py
api/middleware/: auth.py
api/routers/: auth.py  dbt.py  health.py  observe.py  pipeline.py  quarantine.py  schema.py
cli/: __init__.py  main.py
cli/client/: __init__.py  auth.py  dbt.py  http.py  observe.py  pipeline.py  quarantine.py  schema.py
cli/commands/: auth.py  dbt.py  lifecycle.py  observe.py  pipeline.py  quarantine.py  schema.py
cli/core/: __init__.py  checks.py  config.py  context.py  errors.py
cli/data/dashboards/: dbt_health.json  engine_overview.json
cli/output/: __init__.py  console.py  live.py  panels.py  tables.py
cli/scaffold/: __init__.py  _renderer.py  pipeline.py  project.py
cli/scaffold/templates/: docker-compose.yml.j2  engine.yml.j2  incremental_model.sql.j2  pipeline.yml.j2  snapshot.sql.j2  staging_model.sql.j2
config/: engine.yml  loader.py
config/pipelines/: customers.yml  git_repos.yml  hn_stories.yml  npm_packages.yml  orders.yml  products.yml
data-generator/scenarios/: happy_path.py  products.py
dbt/: dbt_project.yml  dev.duckdb  packages.yml  profiles.yml  seed_duckdb.py
dbt/macros/: safe_cast.sql
dbt/models/marts/: _schema.yml  dim_customers.sql  dim_git_repos.sql  dim_npm_packages.sql  dim_products.sql  fct_orders.sql
dbt/models/staging/: _sources.yml  customers_staged.sql  git_repos_staged.sql  hn_stories_staged.sql  npm_packages_staged.sql  orders_staged.sql  products_staged.sql
dbt/snapshots/: customers_snapshot.sql  git_repos_snapshot.sql  hn_stories_snapshot.sql
engine/: main.py
engine/dbt_runner/: results.py  runner.py
engine/ingestion/: consumer.py  offset_manager.py
engine/metrics/: dbt_metrics.py  engine_metrics.py
engine/notifications/: email_notifier.py  webhook.py
engine/schema/: contract_writer.py  deviation.py  inferencer.py  registry.py
engine/staging/: edge_case_handler.py  staging_writer.py
engine/state/: bigtable_client.py  checkpoint_manager.py
monitoring/grafana/dashboards/: dbt_health.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/grafana/provisioning/datasources/: prometheus.yml
monitoring/prometheus/: alerts.yml  prometheus.yml
scripts/: provision_minisky.sh  setup_https.py  test_api.py  test_dbt.py  test_engine.py  test_ingestion.py  test_metrics.py  test_schema.py  test_staging.py  test_state.py  verify_install.sh
terraform/: bigquery.tf  main.tf  outputs.tf  pubsub.tf  variables.tf
tests/integration/cli/: test_lifecycle.py  test_pipeline.py  test_quarantine.py
tests/unit/cli/: test_checks.py  test_config.py  test_scaffold.py
ui/: app.py  auth.py  theme.py
ui/pages/: dbt_lineage.py  overview.py  pipeline_health.py  quarantine.py  schema_history.py
