[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unified-data-engine"
version = "3.0.0"
description = "A GCP-native, dbt-powered micro-batch data pipeline engine"
readme = "Readme.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "Taiwo Hassan", email = "Davidtaiwo56@gmail.com" }
]
keywords = ["dbt", "data-engineering", "gcp", "pipeline", "scd"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0.1",
    "jinja2>=3.1.4",
    "click>=8.1.7",
]

[project.optional-dependencies]
gcp = [
    "google-cloud-pubsub>=2.21.0",
    "google-cloud-bigquery>=3.20.0",
    "google-cloud-bigtable>=2.23.0",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.4.0",
]
all = [
    "unified-data-engine[gcp]",
    "unified-data-engine[dev]",
]

[project.scripts]
ude = "cli.main:app"

[project.urls]
Homepage = "https://github.com/tycoach/unified-data-engine"
Repository = "https://github.com/tycoach/unified-data-engine"
Issues = "https://github.com/tycoach/unified-data-engine/issues"

[tool.hatch.build.targets.wheel]
packages = ["cli"]

[tool.hatch.build.targets.wheel.shared-data]
# Include dashboard JSON files as package data inside the cli package
"cli/data" = "cli/data"

[tool.hatch.build.force-include]
# Explicitly bundle dashboard JSON files
"cli/data/dashboards/engine_overview.json" = "cli/data/dashboards/engine_overview.json"
"cli/data/dashboards/dbt_health.json"      = "cli/data/dashboards/dbt_health.json"

[tool.ruff]
target-version = "py312"
line-length = 88
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]